Changed the mdx files and the Tour template.

--- a/content/tours/france/index.mdx
+++ b/content/tours/france/index.mdx
@@ -10,3 +10,11 @@ duration: 7 days
 destination: Paris
 travelers: 45+
 ---
+
+## Experience France first hand
+
+import { Box } from "../../../src/components/Primitives";
+
+<Box p={4} bg="#1d1d1d" color="white">
+  Too bored at this point to add actual content but you get the idea.
+</Box>
